/*corat
 *02.10.2020
 *13:14
 *KaffeeMaschine
 */

package kaffeemaschine;

/**
 * @author corat
 */
public interface IMenu {

    /**erstellt Menu der KaffeeMaschine
     * 
     */
    static void menu() {

    }

}
