@startuml

title __KAFFEEMASCHINE's Class Diagram__\n

  namespace kaffeemaschine {
    class kaffeemaschine.AbfallBehaelter {
        + AbfallBehaelter()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.AbfallBehaelterVollException {
        + AbfallBehaelterVollException()
        + toString()
    }
  }
  

  namespace kaffeemaschine {
    abstract class kaffeemaschine.AbstractBehaelter {
        - bezeichner : String
        - fuellstand : double
        - maxFuellMenge : double
        + AbstractBehaelter()
        + getBezeichner()
        + getFuellstand()
        + getMaxFuellMenge()
        + setFuellstand()
        {abstract} + toString()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Constants {
        {static} + ABFALLBEHAELTER : int
        {static} + BILD_PFAD : String
        {static} + DREI : int
        {static} + PROGRAMM_ABBRUCH : int
        {static} + SIZE_VIER : int
        {static} + WARTUNG : int
        {static} + ZEHN : int
        {static} + ZEILE_1 : String
        {static} + ZEILE_10 : String
        {static} + ZEILE_2 : String
        {static} + ZEILE_3 : String
        {static} + ZEILE_4 : String
        {static} + ZEILE_5 : String
        {static} + ZEILE_6 : String
        {static} + ZEILE_7 : String
        {static} + ZEILE_8 : String
        {static} + ZEILE_9 : String
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.GuiStart {
        {static} ~ frame : JFrame
        {static} ~ panel : JPanel
        {static} + main()
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IMenu {
        {static} + menu()
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IWartbar {
        {abstract} + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Kaffeemaschine {
        {static} + behaelterListe : AbstractBehaelter[]
        {static} + betriebsbereit : boolean
        + Kaffeemaschine()
        {static} + getraenkZuebereiten()
        {static} + programmAbbruch()
        {static} + programmAuswahl()
        {static} + pruefeZutatenFuellstand()
        {static} + zutatenEntnahme()
        {static} - getraenkAusgeben()
        {static} - wartenAufWartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Rezept {
        {static} + AuswahlProdukt : String[]
        {static} + getZutatenVerbrauch : double[][]
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.StarteKaffeeMaschine {
        {static} + main()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.ZutatLeerException {
        + zutatExceptionText : String[]
        + ZutatLeerException()
        + toString()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.ZutatenBehaelter {
        + ZutatenBehaelter()
        + fuellstandRunden()
        + toString()
        + wartung()
    }
  }
  

  kaffeemaschine.AbfallBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.AbfallBehaelter -up-|> kaffeemaschine.AbstractBehaelter
  kaffeemaschine.AbstractBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.ZutatenBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.ZutatenBehaelter -up-|> kaffeemaschine.AbstractBehaelter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
